feat: add header-currency template

--- a/src/core/components/header/header.component.html
+++ b/src/core/components/header/header.component.html
@@ -1,1 +1,4 @@
-<p>header works!</p>
+<nav class="bg-teal-500 h-40 flex justify-center items-center gap-9">
+  <app-header-currency></app-header-currency>
+  <app-header-currency [currency]="CURRENCY.UAH"></app-header-currency>
+</nav>
